force-app/main/default/objects/Project_Location_GEO__c/Project_Location_GEO__c.object-meta.xml
<CustomObject>
    <label>Project Location GEO</label>
    <nameField>
        <label>Project Location ZIP Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Location GEO</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>