force-app/main/default/objects/Project_Location_GEO__c/fields/County_Name__c.field-meta.xml
<CustomField>
    <fullName>County_Name__c</fullName>
    <label>County Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>