force-app/main/default/objects/Project_Location_GEO__c/fields/Lat__c.field-meta.xml
<CustomField>
    <fullName>Lat__c</fullName>
    <label>Lat</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>