force-app/main/default/objects/Project_Location_GEO__c/fields/Long__c.field-meta.xml
<CustomField>
    <fullName>Long__c</fullName>
    <label>Long</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>