force-app/main/default/objects/Project_Location_GEO__c/fields/Project_Location_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Project_Location_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Location ID(18)</label>
    <type>Text</type>
</CustomField>