force-app/main/default/objects/Project_Location_GEO__c/fields/State_Abbr__c.field-meta.xml
<CustomField>
    <fullName>State_Abbr__c</fullName>
    <label>State Abbr</label>
    <length>2</length>
    <type>Text</type>
</CustomField>