force-app/main/default/objects/Project_Location_GEO__c/fields/State_Name__c.field-meta.xml
<CustomField>
    <fullName>State_Name__c</fullName>
    <label>State Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>