force-app/main/default/objects/Project_Location_GEO__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lat__c</columns>
    <columns>Long__c</columns>
    <columns>City__c</columns>
    <columns>County_Name__c</columns>
    <columns>State_Abbr__c</columns>
    <columns>State_Name__c</columns>
    <columns>Time_Zone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>